# project-example

./: .bump-maint-repo  .docker-wrapper.sh  .dockerignore  .envrc  .eslintignore  .eslintrc.json  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  example.code-workspace  package-lock.json  package.json  sqlx-data.auth.json  sqlx-data.core.json  sqlx-data.example.json  sqlx-data.json
.docker-wrapper/: Dockerfile
api/: VERSION
api/app/api/: Dockerfile  VERSION
api/app/auth/: Dockerfile  VERSION  nginx.conf.template
api/app/base/: Dockerfile
api/app/core/: Dockerfile  VERSION  nginx.conf.template
api/app/example/: Dockerfile  VERSION  nginx.conf.template
api/app/proxy/: Dockerfile  VERSION  nginx.conf.template
api/app/test/: Dockerfile
api/bump/: bump.sh
api/ci/: build-test.sh  build.sh  check-coverage.sh  deploy.sh  migrate.sh  prepare-sqlx.js  prepare-sqlx.sh  setup-protoc.sh  setup-test.sh  test.sh
api/setup/: build.rs  environment.rs  grpc.rs  protobuf.rs
bootstrap/: generate_cloudfront_key_pair.sh  generate_jwt_key.sh
main/_api/: auth.rs  http.rs  main.rs
main/_auth/: main.rs
main/_example/: main.rs
main/api/: main.rs
main/auth/: main.rs
main/example/: main.rs
src/: lib.rs  main.rs
src/auth/: docs.ts  mod.rs
src/auth/_api/: data.rs  infra.rs  init.rs  method.rs  mod.rs  proxy.rs
src/auth/_auth/: mod.rs
src/auth/_common/: data.rs  infra.rs  init.rs  method.rs  mod.rs
src/auth/auth_ticket/: docs.ts  mod.rs
src/auth/auth_user/: docs.ts  mod.rs
src/auth/kernel/: data.rs  detail.rs  feature.rs  infra.rs  mod.rs
src/auth/login_id/: docs.ts  mod.rs
src/auth/password/: docs.ts  mod.rs
src/auth/proxy/: action.rs  data.rs  helper.rs  infra.rs  init.rs  method.rs  mod.rs  test.rs
src/auth/remote/: data.rs  helper.rs  infra.rs  init.rs  method.rs  mod.rs
src/auth/ticket/: docs.ts  mod.rs
src/auth/user/: docs.ts  mod.rs
src/auth/x_actix_web/: route.rs
src/auth/x_outside_feature/: config.ts
src/auth/x_tonic/: route.rs
src/auth/z_grpc/: service.proto
src/auth/z_prisma/: schema.prisma
src/auth/z_protobuf/: api.proto
src/avail/: docs.ts  mod.rs
src/avail/_api/: mod.rs
src/avail/remote/: mod.rs
src/avail/unexpected_error/: docs.ts  mod.rs
src/avail/version/: docs.ts
src/avail/x_actix_web/: route.rs
src/avail/x_outside_feature/: config.ts
src/avail/x_preact/: application_error.stories.ts  application_error.ts  not_found.stories.ts  not_found.ts
src/avail/x_tonic/: route.rs
src/avail/z_protobuf/: api.proto
src/common/: mod.rs
src/common/api/: feature.rs  mod.rs
src/common/base/: init.ts  resource.ts
src/common/proxy/: action.rs  data.rs  event.rs  infra.rs  init.rs  mod.rs  test.rs
src/common/x_actix_web/: route.rs
src/common/x_outside_feature/: config.ts
src/common/x_preact/: vnode.ts
src/common/x_tonic/: route.rs
src/core/: docs.ts
src/core/base/: resource.ts
src/core/dashboard/: init.ts  resource.ts
src/core/outline/: mod.rs
src/core/x_actix_web/: route.rs
src/core/x_outside_feature/: config.ts
src/core/x_tonic/: route.rs
src/core/z_protobuf/: db.proto
src/docs/: docs.ts  init.ts  resource.ts
src/docs/action_docs/: init.ts  mock.ts  resource.ts  test.ts
src/docs/content/: resource.ts
src/docs/detail/: resource.ts
src/docs/init/: resource.ts
src/docs/x_preact/: docs.ts
src/example/: docs.ts  mod.rs
src/example/_api/: mod.rs  proxy.rs
src/example/action_base/: init.ts  mock.ts  resource.ts  test.ts
src/example/action_dashboard/: resource.ts  test.ts
src/example/action_load_season/: action.ts  init.ts  mock.ts  test.ts
src/example/load_season/: action.ts  convert.ts  event.ts  infra.ts  init.ts  method.ts  test.ts
src/example/outline/: mod.rs
src/example/remote/: data.rs  helper.rs  mod.rs  proxy.rs
src/example/x_outside_feature/: config.ts
src/example/z_protobuf/: db.proto
src/outline/_api/: mod.rs
src/outline/_common/: mod.rs
src/outline/_example/: mod.rs
src/outline/z_protobuf/: api.proto  service.proto
src/x_content/: icon.ts  metadata.rs  mod.rs  permission.ts  privacy_policy.ts  role.rs  role.ts  season.ts  site.ts
src/x_content/api/: logger.rs  mail.rs  metadata.rs  mod.rs  permission.rs  role.rs  search.rs
src/x_content/css/: font.css  line-icons-light.css  line-icons-regular.css  site.css
src/x_content/menu/: badge.ts  common.ts  docs_menu.ts  home_menu.ts
src/x_content/x_preact/: dashboard.ts
src/x_main/: example.rs
src/x_main/api/: main.rs
src/x_main/auth/: main.rs
src/x_main/core/: main.rs
src/x_main/example/: main.rs
src/x_main/proxy/: main.rs
src/x_main/public/: entry_point.json
src/x_outside_feature/: common.ts  mod.rs  worker.ts
src/y_environment/: mod.rs
src/z_details/: mod.rs
src/z_details/_api/: logger.rs  (+1 more)
storybook/: package-lock.json  package.json
storybook/.storybook/: main.js  preview-body.html
ui/: VERSION
ui/bump/: bump.sh  ignore  message.sh
ui/ci/: deploy.sh
ui/config/: jest.config.js
ui/env/: entry_point.js
ui/public/: metadata.js  nginx.conf.template  webpack.config.js
ui/secure/: metadata.js  nginx.conf.template  webpack.config.js
ui/setup/: css.js  environment.js  generate-html.js  protobuf.sh  secure-html.js  theme.sh
(+4103 files in other folders)
