[package]
name = "example-api"
version = "0.47.0-proxy"
authors = ["shun <shun.fix9@gmail.com>"]
edition = "2021"
build = "api/setup/build.rs"
default-run = "core"

[[bin]]
name = "proxy"
path = "src/x_main/proxy/main.rs"

[[bin]]
name = "auth"
path = "src/x_main/auth/main.rs"

[[bin]]
name = "core"
path = "src/x_main/core/main.rs"

[dependencies]
async-trait = "0.1"
lazy_static = "1"

getto-application = { path = "api/vendor/getto-application" }
aws-cloudfront-cookie = { path = "api/vendor/aws-cloudfront-cookie" }

tokio = "1"
actix-web = "4.0.0-rc"
actix-cors = "0.6.0-beta"
rusoto_core = { version = "0.46", default_features = false, features = ["rustls"] }
rusoto_ses = { version = "0.46", default_features = false, features = ["rustls"] }
rusoto_dynamodb = { version = "0.46", default_features = false, features = ["rustls"] }
sqlx = { version = "0.5", default_features = false, features = ["macros", "offline", "runtime-tokio-rustls", "mysql", "chrono"] }
sea-query = { version = "0.21", default_features = false, features = ["derive", "backend-mysql", "sqlx-mysql"] }
funty = "=1.1.0"

jsonwebtoken = "8"
argon2 = "0.3"

tonic = { version = "0.6", features = ["transport", "tls", "tls-roots"] }
tower = "0.4"
reqwest = { version = "0.11", default_features = false, features = ["rustls"] }
prost = "0.9"
bytes = "1"
base64 = "0.13"

chrono = "0.4"
time = "0.3"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
rand_core = { version = "0.6", features = ["std"] }

[dev-dependencies]
getto-application-test = { path = "api/vendor/getto-application-test" }

[build-dependencies]
tonic-build = "0.6"
prost-build = "0.9"

regex = "1"
