[package]
name = "example-api"
version = "1.3.0-proxy"
authors = ["shun <shun.fix9@gmail.com>"]
edition = "2021"
build = "api/setup/build.rs"
default-run = "core"

[[bin]]
name = "proxy"
path = "src/x_main/proxy/main.rs"

[[bin]]
name = "auth"
path = "src/x_main/auth/main.rs"

[[bin]]
name = "core"
path = "src/x_main/core/main.rs"

[features]
default = ["sea_query"]
sea_query = []

[dependencies]
async-trait = "0.1.74"

tokio = { version = "1.35.0", features = ["full"] }
actix-web = "4.4.0"
actix-cors = "0.6.5"
aws-config = { version = "1.0.3", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.4.0"
aws-sdk-ses = "1.4.0"
sqlx = { version = "0.7.3", default_features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono"] }
sea-query = { version = "0.30.4", default_features = false, features = ["derive", "backend-mysql"] }
sea-query-binder = { version = "0.5.0", features = ["sqlx-mysql"] }

jsonwebtoken = "9.2.0"
argon2 = "0.5.2"

tonic = { version = "0.10.2", features = ["transport", "tls", "tls-roots"] }
tower = "0.4.13"
reqwest = { version = "0.11.22", default_features = false, features = ["rustls"] }
prost = "0.12.3"
bytes = "1.5.0"
base64 = "0.21.5"
rand = "0.8.5"
rsa = "0.9.6"
sha-1 = { version = "0.10.1", features = ["oid"] }
digest = "0.10.7"

chrono = "0.4.31"
time = "0.3.30"
uuid = { version = "1.6.1", features = ["v4"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
url = "2.5.0"
rand_core = { version = "0.6.4", features = ["std"] }

[dev-dependencies]
pretty_assertions = "1.4.0"

[build-dependencies]
tonic-build = "0.10.2"
prost-build = "0.12.3"

regex = "1"
